--- a/frontend/CSS/agenda.css
+++ b/frontend/CSS/agenda.css
@@ -11,12 +11,12 @@
 #calendar {
     max-width: 900px; /* Define uma largura máxima opcional */
     margin: 0 auto; /* Centraliza o calendário se a largura for menor que a do contêiner */
-    height: 500px;  Defina uma altura fixa se preferir
+    height: 500px; /* Defina uma altura fixa se preferir */
 }
 
 /* Estilos para a área de detalhes do evento */
 #eventDetails h3 {
-     color: var(--green-dark); /* Usar a cor do base.css para títulos */
+     color:var(--green-dark); /* Usar a cor do base.css para títulos */
      margin-bottom: 15px;
 }
 
