--- a/frontend/CSS/login.css
+++ b/frontend/CSS/login.css
@@ -124,3 +124,23 @@ input:focus {
 .footer a:hover {
     text-decoration: underline;
 }
+.links-adicionais {
+    margin-top: 25px;
+    padding-top: 15px;
+    border-top: 1px solid #e0e0e0;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.links-adicionais a {
+    color: #2C786C;
+    text-decoration: none;
+    transition: color 0.3s, text-decoration 0.3s;
+    font-weight: bold;
+}
+
+.links-adicionais a:hover {
+    color: #225F55;
+    text-decoration: underline;
+}
